<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="111dp"
            android:layout_height="115dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFeatureSettings="20dp"
            android:text="@string/sign_up_here_for_your"
            android:textColor="#53E88B"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/admin_dashboard"
            android:textColor="#53E88B"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_your_location"
            android:textColor="@color/starColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/serachshape"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_choose">


            <AutoCompleteTextView
                android:id="@+id/chooseLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_location" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/usernew"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/name"
            android:padding="15dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/textInputlayout" />


        <EditText
            android:id="@+id/edtNameRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/home"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/name_of_restaurant"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/email_or_phone_number"
            android:padding="15dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edtNameRestaurant" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/lock"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/password"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/create_account"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/greenbuttongradient"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />


        <TextView
            android:id="@+id/tvAlreadyHaveAnAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            app:layout_constraintTop_toBottomOf="@id/btnCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="#53E88B" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>