<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateUserActivity">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="111dp"
            android:layout_height="115dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFeatureSettings="20dp"
            android:text="@string/create_new_user_admin"
            android:textColor="#53E88B"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />





        <EditText
            android:id="@+id/editTextName"
            android:layout_width=   "match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/usernew"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="start"
            android:hint="@string/name"
            android:padding="15dp"
            android:paddingStart="10dp"

            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/email"
            android:padding="15dp"
            android:paddingStart="10dp"

            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:drawableLeft="@drawable/lock"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:hint="@string/password"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:background="@drawable/greenbuttongradient"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/create_new_user"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>